running more experiments on the KITTI Forest datasets

--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -99,7 +99,7 @@
     "print(gpus)\n",
     "if gpus:\n",
     "  try:\n",
-    "    memlim = 16*1024\n",
+    "    memlim = 12*1024\n",
     "    tf.config.experimental.set_virtual_device_configuration(gpus[0], [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=memlim)])\n",
     "  except RuntimeError as e:\n",
     "    print(e)\n",
@@ -194,12 +194,13 @@
     "# d2 = np.append(d2, d2_4, axis = 0)\n",
     "# gt = np.append(gt, gt_4, axis = 0)\n",
     "\n",
-    "# # d1_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071v2_scan1_50pts.npy\")\n",
-    "# # d2_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071v2_scan2_50pts.npy\")\n",
-    "# # gt_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071v2_ground_truth_50pts.npy\")\n",
-    "# # d1 = np.append(d1, d1_5, axis = 0)\n",
-    "# # d2 = np.append(d2, d2_5, axis = 0)\n",
-    "# # gt = np.append(gt, gt_5, axis = 0)\n",
+    "# d1_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071v2_scan1_50pts.npy\")\n",
+    "# d2_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071v2_scan2_50pts.npy\")\n",
+    "# gt_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071v2_ground_truth_50pts.npy\")\n",
+    "# d1 = np.append(d1, d1_5, axis = 0)\n",
+    "# d2 = np.append(d2, d2_5, axis = 0)\n",
+    "# gt = np.append(gt, gt_5, axis = 0)\n",
+    "\n",
     "\n",
     "# # d1_6 = np.loadtxt(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/50pts_scan1_320k.txt\")\n",
     "# # d2_6 = np.loadtxt(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/50pts_scan2_320k.txt\")\n",
@@ -235,52 +236,76 @@
     "# d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan2_100pts_skip3.npy\")\n",
     "# gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_ground_truth_100pts_skip3.npy\")\n",
     "\n",
+    "#forest\n",
+    "# d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0027_scan1_100pts.npy\")\n",
+    "# d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0027_scan2_100pts.npy\")\n",
+    "# gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0027_ground_truth_100pts.npy\")\n",
+    "\n",
     "\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-    "d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_scan1_100pts.npy\")\n",
-    "d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_scan2_100pts.npy\")\n",
-    "gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_ground_truth_100pts.npy\")\n",
+    "# d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_scan1_100pts.npy\")\n",
+    "# d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_scan2_100pts.npy\")\n",
+    "# gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_01_ground_truth_100pts.npy\")\n",
+    "d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan1_100pts.npy\")\n",
+    "d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan2_100pts.npy\")\n",
+    "gt = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_ground_truth_100pts.npy\")\n",
     "\n",
-    "d1_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan1_100pts.npy\")\n",
-    "d2_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan2_100pts.npy\")\n",
-    "gt_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_ground_truth_100pts.npy\")\n",
-    "d1 = np.append(d1, d1_2, axis = 0)\n",
-    "d2 = np.append(d2, d2_2, axis = 0)\n",
-    "gt = np.append(gt, gt_2, axis = 0)\n",
+    "# d1_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan1_100pts.npy\")\n",
+    "# d2_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_scan2_100pts.npy\")\n",
+    "# gt_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_CARLA_03_ground_truth_100pts.npy\")\n",
+    "# d1 = np.append(d1, d1_2, axis = 0)\n",
+    "# d2 = np.append(d2, d2_2, axis = 0)\n",
+    "# gt = np.append(gt, gt_2, axis = 0)\n",
     "\n",
-    "d1_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan1_100pts_skip3.npy\")\n",
-    "d2_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan2_100pts_skip3.npy\")\n",
-    "gt_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_ground_truth_100pts_skip3.npy\")\n",
-    "d1 = np.append(d1, d1_4, axis = 0)\n",
-    "d2 = np.append(d2, d2_4, axis = 0)\n",
-    "gt = np.append(gt, gt_4, axis = 0)\n",
+    "# d1_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan1_100pts_skip3.npy\")\n",
+    "# d2_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_scan2_100pts_skip3.npy\")\n",
+    "# gt_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0091_ground_truth_100pts_skip3.npy\")\n",
+    "# d1 = np.append(d1, d1_4, axis = 0)\n",
+    "# d2 = np.append(d2, d2_4, axis = 0)\n",
+    "# gt = np.append(gt, gt_4, axis = 0)\n",
     "\n",
-    "d1_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan1_320k.npy\")\n",
-    "d2_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan2_320k.npy\")\n",
-    "gt_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_ground_truth_320k.npy\")\n",
-    "d1 = np.append(d1, d1_5, axis = 0)\n",
-    "d2 = np.append(d2, d2_5, axis = 0)\n",
-    "gt = np.append(gt, gt_5, axis = 0)\n",
+    "# d1_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan1_320k.npy\")\n",
+    "# d2_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan2_320k.npy\")\n",
+    "# gt_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_ground_truth_320k.npy\")\n",
+    "# d1 = np.append(d1, d1_5, axis = 0)\n",
+    "# d2 = np.append(d2, d2_5, axis = 0)\n",
+    "# gt = np.append(gt, gt_5, axis = 0)\n",
     "\n",
-    "# d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_scan1_100pts.npy\")\n",
-    "# d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_scan2_100pts.npy\")\n",
-    "# gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_ground_truth_100pts.npy\")\n",
-    "d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_scan1_100pts_skip3.npy\")\n",
-    "d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_scan2_100pts_skip3.npy\")\n",
-    "gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_ground_truth_100pts_skip3.npy\")\n",
-    "d1 = np.append(d1, d1_3, axis = 0)\n",
-    "d2 = np.append(d2, d2_3, axis = 0)\n",
-    "gt = np.append(gt, gt_3, axis = 0)\n",
+    "# # d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_scan1_100pts.npy\")\n",
+    "# # d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_scan2_100pts.npy\")\n",
+    "# # gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0071_ground_truth_100pts.npy\")\n",
+    "# d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_scan1_100pts_skip3.npy\")\n",
+    "# d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_scan2_100pts_skip3.npy\")\n",
+    "# gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0095_ground_truth_100pts_skip3.npy\")\n",
+    "# d1 = np.append(d1, d1_3, axis = 0)\n",
+    "# d2 = np.append(d2, d2_3, axis = 0)\n",
+    "# gt = np.append(gt, gt_3, axis = 0)\n",
     "\n",
-    "d1_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan1_100pts_skip3.npy\")\n",
-    "d2_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan2_100pts_skip3.npy\")\n",
-    "gt_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_ground_truth_100pts_skip3.npy\")\n",
-    "# d1_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan1_100pts.npy\")\n",
-    "# d2_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan2_100pts.npy\")\n",
-    "# gt_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_ground_truth_100pts.npy\")\n",
-    "d1 = np.append(d1, d1_6, axis = 0)\n",
-    "d2 = np.append(d2, d2_6, axis = 0)\n",
-    "gt = np.append(gt, gt_6, axis = 0)\n",
+    "# d1_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan1_100pts_skip3.npy\")\n",
+    "# d2_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan2_100pts_skip3.npy\")\n",
+    "# gt_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_ground_truth_100pts_skip3.npy\")\n",
+    "# # d1_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan1_100pts.npy\")\n",
+    "# # d2_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_scan2_100pts.npy\")\n",
+    "# # gt_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0005_ground_truth_100pts.npy\")\n",
+    "# d1 = np.append(d1, d1_6, axis = 0)\n",
+    "# d2 = np.append(d2, d2_6, axis = 0)\n",
+    "# gt = np.append(gt, gt_6, axis = 0)\n",
+    "\n",
+    "#forest (straight road)\n",
+    "d1_7 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0027_scan1_100pts.npy\")\n",
+    "d2_7 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0027_scan2_100pts.npy\")\n",
+    "gt_7 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0027_ground_truth_100pts.npy\")\n",
+    "d1 = np.append(d1, d1_7, axis = 0)\n",
+    "d2 = np.append(d2, d2_7, axis = 0)\n",
+    "gt = np.append(gt, gt_7, axis = 0)\n",
+    "\n",
+    "#forest (curved road)\n",
+    "d1_7 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0028_scan1_100pts.npy\")\n",
+    "d2_7 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0028_scan2_100pts.npy\")\n",
+    "gt_7 = np.load(\"/media/derm/06EF-127D1/TrainingData/KITTI_0028_ground_truth_100pts.npy\")\n",
+    "d1 = np.append(d1, d1_7, axis = 0)\n",
+    "d2 = np.append(d2, d2_7, axis = 0)\n",
+    "gt = np.append(gt, gt_7, axis = 0)\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "\n",
@@ -291,7 +316,7 @@
     "\n",
     "#reshape but don't convert to tensor\n",
     "points_per_sample = 100 #100 #50          #points sammpled from each voxel\n",
-    "tsplit = 0.95                   #this fraction goes into training\n",
+    "tsplit = 0.8 #0.95                   #this fraction goes into training\n",
     "\n",
     "scan1 = np.reshape(d1, [-1, points_per_sample, 3])\n",
     "scan2 = np.reshape(d2, [-1, points_per_sample, 3])\n",
@@ -664,7 +689,7 @@
     "# from network import PointNet as Net\n",
     "# from network import Attention as Net\n",
     "\n",
-    "runLen = 8\n",
+    "runLen = 64\n",
     "\n",
     "def scheduler(epoch, learning_rate):\n",
     "    part1 = runLen//4\n",
@@ -754,49 +779,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$$\n",
-       "\\begin{aligned}\n",
-       "& \\text {Table 1.1. Performance on Normalized Training Data }\\\\\n",
-       "&\\begin{array}{cccc}\n",
-       "\\hline \\hline \\text { } & \\text { Mean Absolute Error } & \\text { Batch Size } & \\text { Epochs } & \\text {Notes} \\\\\n",
-       "\\hline \n",
-       "\\text{Scaled and Zeroed} & 0.6297 & 4096 & 10 & \\text { not good } \\\\\n",
-       "\n",
-       "\\text{ModelNet40 (320k LIDAR)} & 0.0413 & 1024 & 32 & \\text { -- } \\\\\n",
-       "\n",
-       "\\text{ModelNet40 320k LIDAR (100pts)} & 0.0322 & 1024 & 100 & \\text {ModelNet100pts.kmod } \\\\\n",
-       "\n",
-       "\\text{ModelNet40 320k LIDAR (100pts)} & 0.0017 \\text { MSE} & 1024 & 100 & \\text {Net.kmod } \\\\\n",
-       "\n",
-       "\\text{ModelNet40 320k LIDAR (50pts)} & 0.0410 & 1024 & 100 & \\text {ModelNet50.kmod } \\\\\n",
-       "\n",
-       "\\text{ModelNet40 LIDAR MAIN (100pts)} & 0.0321 & 1024 & 64 & \\text {SmallNet.kmod } \\\\\n",
-       "\n",
-       "\\text{KITTI 91 skip3 (100pts)} & 0.050 & 128 & 32 & \\text {KITTINet100.kmod } \\\\\n",
-       "\n",
-       "\\text{KITTI_CARLA 1,3 KITTI 91, 95 (100pts)} & 0.0403 & 1024 & 16 & \\text {KITTICARLA100.kmod } \\\\\n",
-       "\n",
-       "\\text{combined data (100pts)} & 0.0413 & 1024 & 64 & \\text {combinedNet.kmod} \\\\\n",
-       "\n",
-       "\\hline\n",
-       "\\end{array}\n",
-       "\\end{aligned}\n",
-       "$$\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Latex object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%latex\n",
     "$$\n",
@@ -885,8 +870,8 @@
     "for i in range(runlen):\n",
     "    correction = model.predict(inputs)[0] #show what the network thinks\n",
     "#     correction = correction*0.1\n",
-    "    correction = y_test[n] #show actual solution\n",
-    "#     corr_sum += correction\n",
+    "#     correction = y_test[n] #show actual solution\n",
+    "    corr_sum += correction\n",
     "#     print(correction)\n",
     "    c1 = np.array([c1[0,:] + correction[0], c1[1,:] + correction[1], c1[2,:] + correction[2]])\n",
     "    inputs = np.append(c1, c2, axis = 1).T[None,:,:]\n",
