starting to profile code, running DNN benchmarks on Full KITTI Odometry dataset

--- a/v3/perspective_shift/modelNet10_benchmark.ipynb
+++ b/v3/perspective_shift/modelNet10_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "breathing-blair",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-18 17:46:27.419613: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-11-10 17:23:04.710339: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-10-18 17:46:28.045486: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2022-10-18 17:46:28.914165: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-10-18 17:46:28.914230: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-10-18 17:46:28.914237: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2022-11-10 17:23:04.817835: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2022-11-10 17:23:05.136004: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-11-10 17:23:05.136041: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-11-10 17:23:05.136045: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     },
     {
@@ -30,9 +30,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-18 17:46:31.227558: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-10-18 17:46:31.338774: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-10-18 17:46:31.339038: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
+      "2022-11-10 17:23:06.302655: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-10 17:23:06.325953: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-10 17:23:06.326125: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
      ]
     },
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "bottom-clearing",
    "metadata": {},
    "outputs": [
@@ -97,22 +97,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2483.799317389394\n",
-      "took  0.854686975479126 seconds\n"
+      "47.16520807751786\n",
+      "took  0.011690378189086914 seconds\n"
      ]
     }
    ],
    "source": [
     "#load OFF file from ModelNet10 dir\n",
     "start = time.time()\n",
-    "# fn = '/media/derm/06EF-127D1/ModelNet40/toilet/train/toilet_0069.off'\n",
-    "fn = '/media/derm/06EF-127D1/ModelNet40/airplane/train/airplane_0124.off'\n",
+    "fn = '/media/derm/06EF-127D1/ModelNet40/toilet/train/toilet_0069.off'\n",
+    "# fn = '/media/derm/06EF-127D1/ModelNet40/airplane/train/airplane_0124.off'\n",
+    "# fn = '/media/derm/06EF-127D1/ModelNet40/person/train/person_0069.off'\n",
+    "# fn = '/media/derm/06EF-127D1/ModelNet40/sofa/train/sofa_0019.off'\n",
     "\n",
     "M = trimesh.load(fn)\n",
     "#rescale\n",
     "print(M.scale)\n",
     "# M.convert_units('m', guess = True)\n",
-    "test = trimesh.sample.sample_surface(M, 1000)\n",
+    "test = trimesh.sample.sample_surface(M, 100)\n",
     "test2 = trimesh.sample.sample_surface(M, 1000)[0]\n",
     "\n",
     "test2 = test2/M.scale\n",
@@ -123,19 +125,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "acknowledged-spencer",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Press again o to rotate light source, or O to remove it.\n",
+      "_________________________________________________________________\n",
+      "Plotter    title: vedo\n",
+      "     window size: (1280, 1043) - full screen size: (5560, 1920)\n",
+      " active renderer: 0\n",
+      "   nr. of actors: 3 (1486 vertices)\n",
+      "      max bounds: x=(-10.7, 10.7) y=(-15.1, 15.1) z=(-14.6, 14.6)\n",
+      " Click mesh and press i for info.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ad5195803fa4c38be81acc8a9c4be28",
+       "model_id": "a244bb19d4d74477aa417ae888daa4cf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1397)"
+       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1280)"
       ]
      },
      "metadata": {},
@@ -144,7 +160,7 @@
    ],
    "source": [
     "#use Vedo to plot OG and subsampled surfaces\n",
-    "plt1 = Plotter(N = 1, axes = 7, bg = (1, 1, 1), interactive = True)\n",
+    "plt1 = Plotter(N = 1, axes = 0, bg = (1, 1, 1), interactive = True)\n",
     "disp = []\n",
     "\n",
     "# disp.append(Points(M.vertices, c = 'blue', r = 4))\n",
