--- a/v3/spherical_paper/MC_results.ipynb
+++ b/v3/spherical_paper/MC_results.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "dde7ebbc",
    "metadata": {
     "scrolled": false
@@ -385,13 +385,13 @@
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'mat_full' is not defined",
+     "evalue": "name 'np' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 18>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m ICP[:, \u001b[38;5;241m5\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mICP[:, \u001b[38;5;241m5\u001b[39m]\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# print(np.shape(NDT_spherical))\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# print(np.shape(NDT_cart))\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m East \u001b[38;5;241m=\u001b[39m \u001b[43mmat_full\u001b[49m[:,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m     19\u001b[0m North \u001b[38;5;241m=\u001b[39m mat_full[:,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m     21\u001b[0m fig, ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mat_full' is not defined"
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m runlen \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4400\u001b[39m \u001b[38;5;66;03m#4400\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# NDT_spherical = np.loadtxt(\"KITTI_full_results/KITTI_estimates_NDT_spherical.txt\")[:-1]\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m NDT_spherical \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mloadtxt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKITTI_full_results/KITTI_estimates_NDT_spherical_v2.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      5\u001b[0m NDT_cart \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mloadtxt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKITTI_full_results/KITTI_estimates_NDT_cart.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)[:]\n\u001b[1;32m      6\u001b[0m NDT_cart[:,\u001b[38;5;241m5\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mNDT_cart[:,\u001b[38;5;241m3\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
