more benchmarks on KITTI 03, bringing back 2sigma voxel rejection

--- a/v3/ICET_profile.ipynb
+++ b/v3/ICET_profile.ipynb
@@ -311,6 +311,8 @@
     "    #old and slow\n",
     "#     xx = tf.math.reduce_sum(tf.math.square(xpos - mu[:,:,0] ), axis = 1)/npts\n",
     "\n",
+    "    #TODO: try randomly sampling 30 points from each ragged cell, use reduced num pts to calculate cov\n",
+    "\n",
     "    nraggeds = tf.shape(coords)[0].numpy()\n",
     "    for i in range(nraggeds):\n",
     "        c  = tfp.stats.covariance(coords[i])\n",
