--- a/v3/ICET_profile.ipynb
+++ b/v3/ICET_profile.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 130,
    "id": "0f50c4d8",
    "metadata": {},
    "outputs": [
@@ -433,9 +433,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " getting cluster took 0.4227633476257324 seconds !!!\n",
+      " getting cluster took 0.4316895008087158 seconds !!!\n",
       "\n",
-      " took 0.42305421829223633  s with old method \n",
+      " took 0.431957483291626  s with old method \n",
       "\n",
       "\n",
       " bounds_old: \n",
@@ -452,22 +452,22 @@
       " [ 8.53601074 10.99322033]], shape=(10, 2), dtype=float64)\n",
       "(247, 2)\n",
       "\n",
-      " getting cluster took 0.019646406173706055 seconds !!!\n",
+      " getting cluster took 0.01735997200012207 seconds !!!\n",
       "\n",
       " bounds_new: \n",
       " tf.Tensor(\n",
-      "[[ 8.522524  14.541453 ]\n",
-      " [ 6.7979364 11.412506 ]\n",
-      " [27.810429  42.660294 ]\n",
-      " [ 9.476366  14.949856 ]\n",
-      " [ 7.323119  11.605854 ]\n",
-      " [ 3.2152867  3.4199846]\n",
-      " [ 6.439029   9.676741 ]\n",
-      " [ 4.553308   5.183438 ]\n",
-      " [10.583586  12.2757635]\n",
-      " [ 8.534277  10.990534 ]], shape=(10, 2), dtype=float32)\n",
+      "[[ 8.533624  14.82997  ]\n",
+      " [ 6.871817  11.424817 ]\n",
+      " [29.314936  42.687946 ]\n",
+      " [ 9.484554  15.150512 ]\n",
+      " [ 7.3326006 11.615102 ]\n",
+      " [ 3.2224045  3.4309816]\n",
+      " [ 6.444838   9.704906 ]\n",
+      " [ 4.559994   5.1956716]\n",
+      " [10.686122  12.329555 ]\n",
+      " [ 8.536011  10.99322  ]], shape=(10, 2), dtype=float32)\n",
       " \n",
-      " took 0.02012801170349121  s with new method\n"
+      " took 0.01785755157470703  s with new method\n"
      ]
     }
    ],
@@ -624,8 +624,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "e5266f74",
+   "execution_count": 140,
+   "id": "cee64d08",
    "metadata": {
     "scrolled": false
    },
@@ -634,6 +634,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tf.Tensor(\n",
       "[[ 8.522524  14.541453 ]\n",
       " [ 6.7979364 11.412506 ]\n",
       " [27.810429  42.660294 ]\n",
@@ -684,7 +685,7 @@
       " [ 7.504178  13.623266 ]\n",
       " [ 4.284515   5.0440245]\n",
       " [ 4.884039  14.787328 ]\n",
-      " [ 4.628094   5.519573 ]\n",
+      " [ 0.         0.       ]\n",
       " [12.155548  15.764299 ]\n",
       " [ 4.503432   5.148718 ]\n",
       " [ 4.1782327  4.80688  ]\n",
@@ -716,7 +717,7 @@
       " [ 5.002077   6.344604 ]\n",
       " [ 8.489985  10.972036 ]\n",
       " [ 7.82664    9.91175  ]\n",
-      " [15.710832  16.214926 ]\n",
+      " [ 0.         0.       ]\n",
       " [ 4.2394485  4.9639125]\n",
       " [ 3.358301   4.1191483]\n",
       " [ 8.259904  13.342706 ]\n",
@@ -814,7 +815,7 @@
       " [ 2.9856813  4.9600706]\n",
       " [ 6.0732565  7.4648046]\n",
       " [ 8.267883  12.863779 ]\n",
-      " [ 3.5606604  3.754878 ]\n",
+      " [ 0.         0.       ]\n",
       " [ 3.2749722  4.3630967]\n",
       " [ 4.284246   5.0312457]\n",
       " [ 4.8939624  5.475046 ]\n",
@@ -844,7 +845,7 @@
       " [ 5.655535   8.011262 ]\n",
       " [ 3.645092   5.144943 ]\n",
       " [ 3.932908   4.7696724]\n",
-      " [ 4.936266   5.094731 ]\n",
+      " [ 0.         0.       ]\n",
       " [ 5.1645584  7.3518977]\n",
       " [10.058903  12.192071 ]\n",
       " [ 8.642368  10.761019 ]\n",
@@ -861,7 +862,7 @@
       " [ 4.198239   4.849397 ]\n",
       " [ 4.3300953  5.6022153]\n",
       " [ 8.368917  14.352038 ]\n",
-      " [ 3.4909122  4.4261403]\n",
+      " [ 0.         0.       ]\n",
       " [ 6.3962345  7.8497133]\n",
       " [ 3.5875049  3.930584 ]\n",
       " [ 4.1791053  4.790954 ]\n",
@@ -873,14 +874,14 @@
       " [ 5.3897405  8.148342 ]\n",
       " [ 3.3871553  3.852978 ]\n",
       " [ 3.2385838  3.5904548]\n",
-      " [43.938576  44.583683 ]\n",
+      " [ 0.         0.       ]\n",
       " [ 4.287508   5.0436554]\n",
-      " [ 4.8200293  5.050805 ]\n",
-      " [ 4.426933   4.7317104]\n",
-      " [ 4.680234   4.971085 ]\n",
-      " [ 4.9532394  5.1329327]\n",
-      " [ 3.5214775  3.9785638]\n",
-      " [ 5.6153393  0.       ]]\n"
+      " [ 0.         0.       ]\n",
+      " [ 0.         0.       ]\n",
+      " [ 0.         0.       ]\n",
+      " [ 0.         0.       ]\n",
+      " [ 0.         0.       ]\n",
+      " [ 0.         0.       ]], shape=(247, 2), dtype=float32)\n"
      ]
     }
    ],
@@ -899,7 +900,9 @@
     "outer  = tf.gather(tf.transpose(rads), outer_idx, batch_dims=1)\n",
     "# print(\"\\n outer: \\n\", outer)\n",
     "\n",
-    "bounds = np.array([inner, outer]).T\n",
+    "# bounds = np.array([inner, outer]).T\n",
+    "bounds = tf.concat((inner[:,None], outer[:,None]), axis = 1)\n",
+    "bounds = tf.cast(good_clusters[:,None], tf.float32) * bounds\n",
     "print(bounds)"
    ]
   },
